--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <link rel="stylesheet" href="practica2CSS_halloween.css">
+    <link rel="stylesheet" href="index.css">
 
    
     </head>
